# learn-opengl

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp  run.sh  run_example.sh  shader.frag  shader.vert  shader_light.frag
examples/: camera.cpp  camera_shader.frag  colors.cpp  colors_shader.frag  coords_system.cpp  light_casters.cpp  light_casters_shader.frag  light_casters_shader.vert  lighting_maps.cpp  lighting_maps_shader.frag  phong_lighting.cpp  phong_lighting_shader.frag  phong_lighting_shader.vert  simple_texture.cpp  simple_texture_shader.frag  simple_texture_shader.vert  transformations.cpp  transformations_shader.frag  transformations_shader.vert
include/: camera.hpp  mesh.hpp  model.hpp  pch.hpp  shader.hpp  texture.hpp
src/: camera.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
template/: README.md  main.cpp
todos/: README.md
